# Polygonization-Optimal-Area-Approximation

./: CMakeLists.txt  README.md
include/: common.hpp  graham_scan.hpp  utils.hpp
include/optimal_polygonization/: ant_colony_algo.hpp  global_transition.hpp  local_search_algo.hpp  local_transition.hpp  simulated_annealing_algo.hpp  subdivision.hpp
include/simple_polygonization/: ch2polyline_algo.hpp  incremental_algo.hpp  onion_algo.hpp
scripts/: plot_polygon.py  run_test_cases.sh
src/: graham_scan.cpp  main.cpp  utils.cpp
src/optimal_polygonization/: ant_colony_algo.cpp  global_transition.cpp  local_search_algo.cpp  local_transition.cpp  simulated_annealing_algo.cpp  subdivision.cpp
src/simple_polygonization/: ch2polyline_algo.cpp  incremental_algo.cpp  onion_algo.cpp
